--- a/requirements-paperspace.txt
+++ b/requirements-paperspace.txt
@@ -41,7 +41,7 @@ httpx
 onnxruntime; sys_platform == 'darwin'
 onnxruntime-gpu; sys_platform != 'darwin'
 torchcrepe==0.0.20
-fastapi==0.88
+fastapi
 python-dotenv>=1.0.0
 av
 edge-tts
