--- a/requirements-paperspace.txt
+++ b/requirements-paperspace.txt
@@ -6,7 +6,7 @@ librosa==0.9.1
 llvmlite==0.39.0
 fairseq==0.12.2
 faiss-cpu==1.7.3
-gradio==4.36.0
+gradio==3.34.0
 Cython
 pydub>=0.25.1
 soundfile>=0.12.1
@@ -41,7 +41,7 @@ httpx
 onnxruntime; sys_platform == 'darwin'
 onnxruntime-gpu; sys_platform != 'darwin'
 torchcrepe==0.0.20
-fastapi
+fastapi==0.88
 python-dotenv>=1.0.0
 av
 edge-tts
